Fixing z-index problem

--- a/css/main.css
+++ b/css/main.css
@@ -25,6 +25,8 @@ a:hover {
 }
 
 header { 
+    z-index: 2;
+
     position: absolute ;
     width: 100% ;
     display: flex ; 
@@ -71,7 +73,7 @@ section {
 }
 
 .hero { 
-    z-index: -1;
+    z-index: 1 ;
     color : #fff ;
     position: relative;
     text-align: center ; 
@@ -107,6 +109,7 @@ section {
 }
 
 .content { 
+z-index : 1 ;
     opacity: 0;
     margin-top: 100px ;
     animation: 1s slidefade 1s forwards ;
